Sync multiple imdb watchlists
Enter all in settings field, comma separated

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -293,7 +293,7 @@
 		"skipwaitweeks": 26,
 		"Watchlists": {
 			"imdbfrequency": 60,
-			"imdbrss": "",
+			"imdbrss": [],
 			"imdbsync": false,
 			"popularmoviessync": false,
 			"popularmovieshour": 0,
