Add Trakt list integration
See #38

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -297,8 +297,19 @@
 			"imdbsync": false,
 			"popularmoviessync": false,
 			"popularmovieshour": 0,
-			"popularmoviesmin": 0
-
+			"popularmoviesmin": 0,
+			"traktsync": false,
+			"traktlength": 10,
+			"traktscore": 0,
+			"traktfrequency": 60,
+			"Traktlists": {
+				"trending": false,
+				"popular": false,
+				"watched": false,
+				"collected": false,
+				"anticipated": false,
+				"boxoffice": false
+			}
 		}
 	},
 	"Server": {
