Add option to skip predb check
Typically Watcher checks Predb to see if legit releases are out before attempting to search indexers. This option allows users to bypass that check and will execute the normal backlog search/rss sync schedule regardless of predb status.

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -285,6 +285,7 @@
 		"keepsearchingdays": 3,
 		"keepsearchingscore": 50,
 		"mintorrentseeds": 1,
+		"predbcheck": true,
 		"retention": 1500,
 		"rsssyncfrequency": 60,
 		"searchafteradd": false,
