Add YTS torrent provider

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -88,7 +88,8 @@
 			"limetorrents": false,
 			"extratorrent": false,
 			"skytorrents": false,
-			"thepiratebay": false
+			"thepiratebay": false,
+			"yts": false
 		},
 		"TorzNab": {}
 	},
