--- a/core/conf_global.ini
+++ b/core/conf_global.ini
@@ -4,3 +4,4 @@ server.socket_host = core.SERVER_ADDRESS
 server.socket_port = core.SERVER_PORT
 tools.trailing_slash.on = True
 engine.timeout_monitor.on = False
+tools.gzip.on = True
