--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -1,344 +1,346 @@
 {
-	"Downloader": {
-		"Sources": {
-			"torrentenabled": false,
-			"usenetenabled": true
-		},
-		"Torrent": {
-			"DelugeRPC": {
-				"addpaused": false,
-				"category": "Watcher",
-				"enabled": false,
-				"host": "localhost",
-				"pass": "",
-				"port": 58846,
-				"priority": "Normal",
-				"user": ""
-			},
-			"DelugeWeb": {
-				"addpaused": false,
-				"category": "Watcher",
-				"enabled": false,
-				"host": "http://localhost",
-				"pass": "",
-				"port": 8112,
-				"priority": "Normal"
-			},
-			"QBittorrent": {
-				"category": "Watcher",
-				"enabled": false,
-				"host": "http://localhost",
-				"pass": "",
-				"port": 8080,
-				"user": ""
-			},
-			"rTorrentSCGI":{
-				"addpaused": false,
-				"label": "Watcher",
-				"enabled": false,
-				"host": "localhost",
-				"port": 5000
-			},
-			"rTorrentHTTP":{
-				"addpaused": false,
-				"label": "Watcher",
-				"enabled": false,
-				"address": "http://localhost/rutorrent/plugins/httprpc/action.php",
-				"port": 5000,
-				"user": "",
-				"pass": ""
-			},
-			"Transmission": {
-				"addpaused": false,
-				"category": "Watcher",
-				"enabled": true,
-				"host": "localhost",
-				"pass": "",
-				"port": 9091,
-				"priority": "Normal",
-				"user": ""
-			}
-		},
-		"Usenet": {
-			"NzbGet": {
-				"addpaused": true,
-				"category": "Watcher",
-				"enabled": true,
-				"host": "",
-				"pass": "tegbzn6789",
-				"port": 6789,
-				"priority": "Normal",
-				"user": "nzbget"
-			},
-			"Sabnzbd": {
-				"api": "",
-				"category": "Watcher",
-				"enabled": false,
-				"host": "",
-				"port": 8080,
-				"priority": "Paused"
-			}
-		}
-	},
-	"Indexers": {
-		"NewzNab": {},
-		"Torrent": {
-			"rarbg": false,
-			"torrentz2": false,
-			"limetorrents": false,
-			"extratorrent": false,
-			"skytorrents": false,
-			"thepiratebay": false,
-			"yts": false
-		},
-		"TorzNab": {}
-	},
-	"Plugins": {
-		"added": {},
-		"finished": {},
-		"snatched": {}
-	},
-	"Postprocessing": {
-		"replacespaces": false,
-		"cleanupenabled": false,
-		"cleanupfailed": true,
-		"createhardlink": false,
-		"moveextensions": "",
-		"moverenabled": false,
-		"moverpath": "",
-		"renamerenabled": true,
-		"renamerstring": "",
-		"replaceillegal": "",
-		"RemoteMapping": {},
-		"recyclebinenabled": false,
-		"recyclebindirectory": "",
-		"removeadditionalfiles": false
-	},
-	"Quality": {
-		"Sources": {
-			"BluRay-4K": {
-				"max": 90000,
-				"min": 10000
-			},
-		    "BluRay-1080P": {
-		        "max": 20000,
-		        "min": 4000
-		    },
-		    "BluRay-720P": {
-		        "max": 10000,
-		        "min": 2000
-		    },
-			"WebDL-4K": {
-				"max": 12000,
-				"min": 4000
-			},
-			"WebDL-1080P": {
-				"max": 6000,
-				"min": 2000
-			},
-			"WebDL-720P": {
-				"max": 2500,
-				"min": 500
-			},
-			"WebRip-4K": {
-		        "max": 12000,
-		        "min": 4000
-		    },
-		    "WebRip-1080P": {
-		        "max": 6000,
-		        "min": 2000
-		    },
-		    "WebRip-720P": {
-		        "max": 2500,
-		        "min": 500
-		    },
-			"DVD-SD": {
-				"max": 1500,
-				"min": 400
-			},
-		    "Screener-1080P": {
-		        "max": 15000,
-		        "min": 2000
-		    },
-		    "Screener-720P": {
-		        "max": 5000,
-		        "min": 500
-		    },
-		    "Telesync-SD": {
-		        "max": 2500,
-		        "min": 500
-		    },
-			"CAM-SD": {
-				"max": 1500,
-				"min": 400
-			}
-		},
-		"Aliases": {
-			"BluRay": [
+    "Downloader": {
+        "Sources": {
+            "torrentenabled": false,
+            "usenetenabled": true
+        },
+        "Torrent": {
+            "DelugeRPC": {
+                "addpaused": false,
+                "category": "Watcher",
+                "enabled": false,
+                "host": "localhost",
+                "pass": "",
+                "port": 58846,
+                "priority": "Normal",
+                "user": ""
+            },
+            "DelugeWeb": {
+                "addpaused": false,
+                "category": "Watcher",
+                "enabled": false,
+                "host": "http://localhost",
+                "pass": "",
+                "port": 8112,
+                "priority": "Normal"
+            },
+            "QBittorrent": {
+                "category": "Watcher",
+                "enabled": false,
+                "host": "http://localhost",
+                "pass": "",
+                "port": 8080,
+                "user": ""
+            },
+            "Transmission": {
+                "addpaused": false,
+                "category": "Watcher",
+                "enabled": true,
+                "host": "localhost",
+                "pass": "",
+                "port": 9091,
+                "priority": "Normal",
+                "user": ""
+            },
+            "rTorrentHTTP": {
+                "addpaused": false,
+                "address": "http://localhost/rutorrent/plugins/httprpc/action.php",
+                "enabled": false,
+                "label": "Watcher",
+                "pass": "",
+                "port": 5000,
+                "user": ""
+            },
+            "rTorrentSCGI": {
+                "addpaused": false,
+                "enabled": false,
+                "host": "localhost",
+                "label": "Watcher",
+                "port": 5000
+            }
+        },
+        "Usenet": {
+            "NzbGet": {
+                "addpaused": true,
+                "category": "Watcher",
+                "enabled": true,
+                "host": "",
+                "pass": "tegbzn6789",
+                "port": 6789,
+                "priority": "Normal",
+                "user": "nzbget"
+            },
+            "Sabnzbd": {
+                "api": "",
+                "category": "Watcher",
+                "enabled": false,
+                "host": "",
+                "port": 8080,
+                "priority": "Paused"
+            }
+        }
+    },
+    "Indexers": {
+        "NewzNab": {},
+        "Torrent": {
+            "extratorrent": false,
+            "limetorrents": false,
+            "rarbg": false,
+            "skytorrents": false,
+            "thepiratebay": false,
+            "torrentz2": false,
+            "yts": false
+        },
+        "TorzNab": {}
+    },
+    "Plugins": {
+        "added": {},
+        "finished": {},
+        "snatched": {}
+    },
+    "Postprocessing": {
+        "RemoteMapping": {},
+        "cleanupenabled": false,
+        "cleanupfailed": true,
+        "createhardlink": false,
+        "moveextensions": "",
+        "moverenabled": false,
+        "moverpath": "",
+        "recyclebindirectory": "",
+        "recyclebinenabled": false,
+        "removeadditionalfiles": false,
+        "renamerenabled": true,
+        "renamerstring": "",
+        "replaceillegal": "",
+        "replacespaces": false
+    },
+    "Quality": {
+        "Aliases": {
+            "BluRay": [
                 "bluray",
                 "blu-ray",
                 "blueray",
                 "blue-ray",
                 "bdrip",
                 "brrip"
-			],
-           "CAM": [
+            ],
+            "CAM": [
                 "cam",
                 "camrip"
-			],
-           "DVD": [
+            ],
+            "DVD": [
                 "dvd-rip",
                 "dvdrip"
-			],
-           "Screener": [
+            ],
+            "Screener": [
                 "screener",
                 "scr",
                 "dvdscr",
                 "dvdscreener",
                 "bdscr"
-			],
-           "Telesync": [
+            ],
+            "Telesync": [
                 "telesync",
                 "ts",
                 "pdvd"
-			],
-           "WebDL": [
+            ],
+            "WebDL": [
                 "web-dl",
                 "webdl"
-			],
-           "WebRip": [
+            ],
+            "WebRip": [
                 "web-rip",
                 "webrip"
-			]
+            ]
         },
-		"Profiles": {
-			"Default": {
-				"Sources": {
-					"BluRay-1080P": [
-						true,
-						1
-					],
-					"BluRay-4K": [
-						false,
-						0
-					],
-					"BluRay-720P": [
-						true,
-						2
-					],
-					"CAM-SD": [
-						false,
-						13
-					],
-					"DVD-SD": [
-						false,
-						9
-					],
-					"Screener-1080P": [
-						false,
-						10
-					],
-					"Screener-720P": [
-						false,
-						11
-					],
-					"Telesync-SD": [
-						false,
-						12
-					],
-					"WebDL-1080P": [
-						true,
-						4
-					],
-					"WebDL-4K": [
-						false,
-						3
-					],
-					"WebDL-720P": [
-						true,
-						5
-					],
-					"WebRip-1080P": [
-						true,
-						7
-					],
-					"WebRip-4K": [
-						false,
-						6
-					],
-					"WebRip-720P": [
-						true,
-						8
-					]
-				},
-				"ignoredwords": "subs,german,dutch,french,truefrench,danish,swedish,spanish,italian,korean,dubbed,swesub,korsub,dksubs,vain,HC,blurred",
-				"preferredwords": "",
-				"prefersmaller": false,
-				"requiredwords": "",
-				"scoretitle": true
-			}
-		}
-	},
-	"Search": {
-		"autograb": true,
-		"freeleechpoints": 10,
-		"keepsearching": false,
-		"keepsearchingdays": 3,
-		"keepsearchingscore": 50,
-		"mintorrentseeds": 1,
-		"predbcheck": true,
-		"retention": 1500,
-		"rsssyncfrequency": 60,
-		"searchafteradd": false,
-		"skipwait": false,
-		"skipwaitweeks": 26,
-		"waitdays": 1,
-		"Watchlists": {
-			"imdbfrequency": 60,
-			"imdbrss": [],
-			"imdbsync": false,
-			"popularmoviessync": false,
-			"popularmovieshour": 0,
-			"popularmoviesmin": 0,
-			"traktsync": false,
-			"traktlength": 10,
-			"traktscore": 0,
-			"traktfrequency": 60,
-			"Traktlists": {
-				"trending": false,
-				"popular": false,
-				"watched": false,
-				"collected": false,
-				"anticipated": false,
-				"boxoffice": false
-			}
-		}
-	},
-	"Server": {
-		"Proxy": {
-			"enabled": false,
-			"host": "",
-			"port": "",
-			"type": "",
-			"user": "",
-			"pass": "",
-			"whitelist": ""
-		},
-		"apikey": "1c528e78c625e64e9a008d86a1b207cc",
-		"authpass": "rehctaw",
-		"authrequired": false,
-		"authuser": "watcher",
-		"checkupdatefrequency": 24,
-		"checkupdates": true,
-		"customwebroot": false,
-		"customwebrootpath": "/watcher",
-		"gitbranch": "master",
-		"installupdates": false,
-		"keeplog": 3,
-		"launchbrowser": false,
-		"serverhost": "0.0.0.0",
-		"serverport": 9090,
-		"uitheme": "",
-		"verifyssl": true
-	}
+        "Profiles": {
+            "Default": {
+                "Sources": {
+                    "BluRay-1080P": [
+                        true,
+                        1
+                    ],
+                    "BluRay-4K": [
+                        false,
+                        0
+                    ],
+                    "BluRay-720P": [
+                        true,
+                        2
+                    ],
+                    "CAM-SD": [
+                        false,
+                        13
+                    ],
+                    "DVD-SD": [
+                        false,
+                        9
+                    ],
+                    "Screener-1080P": [
+                        false,
+                        10
+                    ],
+                    "Screener-720P": [
+                        false,
+                        11
+                    ],
+                    "Telesync-SD": [
+                        false,
+                        12
+                    ],
+                    "WebDL-1080P": [
+                        true,
+                        4
+                    ],
+                    "WebDL-4K": [
+                        false,
+                        3
+                    ],
+                    "WebDL-720P": [
+                        true,
+                        5
+                    ],
+                    "WebRip-1080P": [
+                        true,
+                        7
+                    ],
+                    "WebRip-4K": [
+                        false,
+                        6
+                    ],
+                    "WebRip-720P": [
+                        true,
+                        8
+                    ]
+                },
+                "ignoredwords": "subs,german,dutch,french,truefrench,danish,swedish,spanish,italian,korean,dubbed,swesub,korsub,dksubs,vain,HC,blurred",
+                "preferredwords": "",
+                "prefersmaller": false,
+                "requiredwords": "",
+                "scoretitle": true
+            }
+        },
+        "Sources": {
+            "BluRay-1080P": {
+                "max": 20000,
+                "min": 4000
+            },
+            "BluRay-4K": {
+                "max": 90000,
+                "min": 10000
+            },
+            "BluRay-720P": {
+                "max": 10000,
+                "min": 2000
+            },
+            "CAM-SD": {
+                "max": 1500,
+                "min": 400
+            },
+            "DVD-SD": {
+                "max": 1500,
+                "min": 400
+            },
+            "Screener-1080P": {
+                "max": 15000,
+                "min": 2000
+            },
+            "Screener-720P": {
+                "max": 5000,
+                "min": 500
+            },
+            "Telesync-SD": {
+                "max": 2500,
+                "min": 500
+            },
+            "WebDL-1080P": {
+                "max": 6000,
+                "min": 2000
+            },
+            "WebDL-4K": {
+                "max": 12000,
+                "min": 4000
+            },
+            "WebDL-720P": {
+                "max": 2500,
+                "min": 500
+            },
+            "WebRip-1080P": {
+                "max": 6000,
+                "min": 2000
+            },
+            "WebRip-4K": {
+                "max": 12000,
+                "min": 4000
+            },
+            "WebRip-720P": {
+                "max": 2500,
+                "min": 500
+            }
+        }
+    },
+    "Search": {
+        "Watchlists": {
+            "Traktlists": {
+                "anticipated": false,
+                "boxoffice": false,
+                "collected": false,
+                "popular": false,
+                "trending": false,
+                "watched": false
+            },
+            "imdbfrequency": 60,
+            "imdbrss": [],
+            "imdbsync": false,
+            "popularmovieshour": 0,
+            "popularmoviesmin": 0,
+            "popularmoviessync": false,
+            "traktfrequency": 60,
+            "traktlength": 10,
+            "traktscore": 0,
+            "traktsync": false
+        },
+        "autograb": true,
+        "freeleechpoints": 10,
+        "keepsearching": false,
+        "keepsearchingdays": 3,
+        "keepsearchingscore": 50,
+        "mintorrentseeds": 1,
+        "retention": 1500,
+        "rsssyncfrequency": 60,
+        "searchafteradd": false,
+        "skipwait": false,
+        "skipwaitweeks": 26,
+        "verifyreleases": "",
+        "verifyreleasesskip": false,
+        "verifyreleasesskipweeks": 28,
+        "waitdays": 1
+    },
+    "Server": {
+        "Proxy": {
+            "enabled": false,
+            "host": "",
+            "pass": "",
+            "port": "",
+            "type": "",
+            "user": "",
+            "whitelist": ""
+        },
+        "apikey": "1c528e78c625e64e9a008d86a1b207cc",
+        "authpass": "rehctaw",
+        "authrequired": false,
+        "authuser": "watcher",
+        "checkupdatefrequency": 24,
+        "checkupdates": true,
+        "customwebroot": false,
+        "customwebrootpath": "/watcher",
+        "gitbranch": "master",
+        "installupdates": false,
+        "keeplog": 3,
+        "launchbrowser": false,
+        "serverhost": "0.0.0.0",
+        "serverport": 9090,
+        "uitheme": "",
+        "verifyssl": true
+    }
 }
