Add Blackhole download client for NZBs

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -60,6 +60,10 @@
             }
         },
         "Usenet": {
+            "BlackHole": {
+                "directory": "",
+                "enabled": false
+            },
             "NzbGet": {
                 "addpaused": true,
                 "category": "Watcher",
