Add torrent black hole download client
Not *super* reliable since it relies on torrent cache sites to resolve the hash to a torrent file. If none have it indexed the download will fail.

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -5,6 +5,10 @@
             "usenetenabled": true
         },
         "Torrent": {
+            "BlackHole": {
+                "directory": "",
+                "enabled": false
+            },
             "DelugeRPC": {
                 "addpaused": false,
                 "category": "Watcher",
