Set server shutdown to 0
Sets timeout for joining worker threads to 0. Makes shutdown/restart significantly faster.

--- a/core/conf_global.ini
+++ b/core/conf_global.ini
@@ -1,4 +1,5 @@
 [global]
+server.shutdown_timeout = 0
 engine.autoreload.on = False
 server.socket_host = core.SERVER_ADDRESS
 server.socket_port = core.SERVER_PORT
