Better session key handling
Explcitly set session storage to ram

Set sessions settings in global config

--- a/core/conf_global.ini
+++ b/core/conf_global.ini
@@ -6,3 +6,7 @@ server.socket_port = core.SERVER_PORT
 tools.trailing_slash.on = True
 engine.timeout_monitor.on = False
 tools.gzip.on = True
+tools.sessions.on = True
+tools.sessions.timeout = 60
+tools.sessions.storage_type = 'ram'
+tools.sessions.name = 'session'
