Add user-specified ssl cert options
User can supply a ssl cert/key in settings>server to host the server via https without a reverse-proxy setup.

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -348,6 +348,8 @@
         "launchbrowser": false,
         "serverhost": "0.0.0.0",
         "serverport": 9090,
+        "ssl_cert": "",
+        "ssl_key": "",
         "uitheme": "",
         "verifyssl": true
     }
