--- a/core/conf_global.ini
+++ b/core/conf_global.ini
@@ -9,3 +9,4 @@ tools.gzip.on = True
 tools.sessions.on = True
 tools.sessions.timeout = 60
 tools.sessions.name = 'session'
+cherrypy.server.ssl_module = 'builtin'
