#93 (and others) - Task to scan directory for postprocessing
The wiki will have better info, but this allows the user to specify a dir to be scanned every X minutes for movies to postprocess. Good for users with black hole downloaders or unique server configurations with dropboxes, etc.

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -120,7 +120,13 @@
         "renamerenabled": true,
         "renamerstring": "",
         "replaceillegal": "",
-        "replacespaces": false
+        "replacespaces": false,
+        "Scanner": {
+            "enabled": false,
+            "interval": 4,
+            "directory": "",
+            "newfilesonly": false
+        }
     },
     "Quality": {
         "Aliases": {
