Add Zooqle torrent indexer -- backlog only
Adds Zooqle backlog search option. Zooqle doesn't seem to offer a new releases RSS, so this is the best I can do for now.

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -97,7 +97,8 @@
             "skytorrents": false,
             "thepiratebay": false,
             "torrentz2": false,
-            "yts": false
+            "yts": false,
+            "zooqle": false
         },
         "TorzNab": {}
     },
