Add ability to hide finished movies in library view
Filters out Finished and Disabled movies in library view

Shows label at bottom of list indicating number of movies not shown

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -350,6 +350,7 @@
         "customwebroot": false,
         "customwebrootpath": "/watcher",
         "gitbranch": "master",
+        "hidefinished": false,
         "installupdates": false,
         "keeplog": 3,
         "launchbrowser": false,
