--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -350,6 +350,7 @@
         "customwebroot": false,
         "customwebrootpath": "/watcher",
         "gitbranch": "master",
+        "gitpath": "",
         "hidefinished": false,
         "installupdates": false,
         "keeplog": 3,
