--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -355,6 +355,7 @@
         "installupdates": false,
         "keeplog": 3,
         "launchbrowser": false,
+        "language": "en",
         "serverhost": "0.0.0.0",
         "serverport": 9090,
         "ssl_cert": "",
