Use explicit session locking
Requires code to include session lock management but allows for concurrent requests to be handles without hanging.

--- a/core/conf_app.ini
+++ b/core/conf_app.ini
@@ -1,6 +1,7 @@
 [/]
 tools.auth.on = True
 tools.staticdir.root = core.PROG_PATH
+tools.sessions.locking = 'explicit'
 
 tools.sessions.on = True
 tools.sessions.name = 'session'
