--- a/core/conf_app.ini
+++ b/core/conf_app.ini
@@ -10,6 +10,10 @@ tools.sessions.name = 'session'
 tools.staticdir.on = True
 tools.staticdir.dir = './static'
 
+[/posters]
+tools.staticdir.on = True
+tools.staticdir.dir = './userdata/posters/'
+
 [/logs]
 tools.staticdir.on = True
 tools.staticdir.dir = core.LOG_DIR
