Quick and dirty basic websocket setup

--- a/core/conf_app.ini
+++ b/core/conf_app.ini
@@ -17,3 +17,8 @@ tools.staticdir.dir = './userdata/posters/'
 [/logs]
 tools.staticdir.on = True
 tools.staticdir.dir = core.LOG_DIR
+
+[/ws]
+tools.gzip.on = False
+tools.websocket.on = True
+tools.websocket.handler_cls = core.app.ChatWebSocketHandler
