--- a/core/conf_app.ini
+++ b/core/conf_app.ini
@@ -17,3 +17,28 @@ tools.staticdir.dir = './userdata/posters/'
 [/logs]
 tools.staticdir.on = True
 tools.staticdir.dir = core.LOG_DIR
+
+[/api]
+tools.auth.on = False
+
+[/postprocessing]
+tools.auth.on = False
+
+[/auth]
+tools.auth.on = False
+tools.staticdir.root = core.PROG_PATH
+
+tools.sessions.on = True
+tools.sessions.timeout = 60
+tools.sessions.storage_path = 'sessions'
+tools.sessions.name = 'session'
+
+[/auth/favicon.ico]
+tools.staticfile.on = True
+tools.staticfile.filename = os.path.join(core.PROG_PATH, "/lib/cherrypy/favicon.ico")
+
+[/auth/static]
+tools.staticdir.on = True
+tools.staticdir.dir = './static'
+
+
