--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -96,6 +96,7 @@
             "rarbg": false,
             "skytorrents": false,
             "thepiratebay": false,
+            "torrentdownloads": false,
             "torrentz2": false,
             "yts": false,
             "zooqle": false
