#155 Enable scoring for BluRay, WebDL, and WebRip in SD resolution
Adds BluRay-SD, WebDL-SD, and WebRip-SD to core.SOURCES

Adds same to config for size ranges.

Uses dict.get() to read sources from config since quality profiles will not contain new sources until the config is saved again from that page. Defaults new sources to enabled = False, priority = 99.

Parsing needed no changes since it determines resolution and source media separately and would ignore anything not in core.SOURCES.

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -249,6 +249,10 @@
                 "max": 10000,
                 "min": 2000
             },
+            "BluRay-SD": {
+                "max": 3000,
+                "min": 500
+            },
             "CAM-SD": {
                 "max": 1500,
                 "min": 400
@@ -281,6 +285,10 @@
                 "max": 2500,
                 "min": 500
             },
+            "WebDL-SD": {
+                "max": 3000,
+                "min": 500
+            },
             "WebRip-1080P": {
                 "max": 6000,
                 "min": 2000
@@ -291,6 +299,10 @@
             },
             "WebRip-720P": {
                 "max": 2500,
+                "min": 500
+            },
+            "WebRip-SD": {
+                "max": 3000,
                 "min": 500
             }
         }
