#175 allow speicifying min size for postprocessing scan
User can supply minimum size for postprocessing scanner to attempt to import (default 500mb)

Will help prevent attempting to process extra files (nfo, srt, 'hidden' .unix files, etc)

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -127,7 +127,8 @@
             "enabled": false,
             "interval": 4,
             "directory": "",
-            "newfilesonly": false
+            "newfilesonly": false,
+            "minsize": 500
         }
     },
     "Quality": {
