#185 Add userdata launch option
User can set userdata dir rather than specifying separate locations for database, config, etc.

Can be used along with specific flags so that the userdata folder is set and the database file can be elsewhere entirely.

--- a/core/conf_app.ini
+++ b/core/conf_app.ini
@@ -12,7 +12,7 @@ tools.staticdir.dir = './static'
 
 [/posters]
 tools.staticdir.on = True
-tools.staticdir.dir = './userdata/posters/'
+tools.staticdir.dir = os.path.relpath(os.path.join(core.USERDATA, 'posters'), core.PROG_PATH)
 
 [/logs]
 tools.staticdir.on = True
