Fix paths in main app config
Use os.path.join to construct every node of file path. Causes problems in Windows to have forward- and back-slashes, may also affect *nix.

--- a/core/conf_app.ini
+++ b/core/conf_app.ini
@@ -14,6 +14,10 @@ tools.staticdir.dir = './static'
 tools.staticdir.on = True
 tools.staticdir.dir = os.path.relpath(os.path.join(core.USERDATA, 'posters'), core.PROG_PATH)
 
+[/posters/missing_poster.jpg]
+tools.staticfile.on = True
+tools.staticfile.filename = os.path.join(core.PROG_PATH, "static", "images", "missing_poster.jpg")
+
 [/logs]
 tools.staticdir.on = True
 tools.staticdir.dir = core.LOG_DIR
@@ -35,7 +39,7 @@ tools.sessions.name = 'session'
 
 [/auth/favicon.ico]
 tools.staticfile.on = True
-tools.staticfile.filename = os.path.join(core.PROG_PATH, "/lib/cherrypy/favicon.ico")
+tools.staticfile.filename = os.path.join(core.PROG_PATH, "static", "image", "favicon.ico")
 
 [/auth/static]
 tools.staticdir.on = True
