Use CSV for IMDB watchlist syncing
Since IMDB no longer provides xml/rss.

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -253,6 +253,7 @@
                 "watched": false
             },
             "imdbfrequency": 60,
+            "imdbcsv": [],
             "imdbrss": [],
             "imdbsync": false,
             "popularmovieshour": 0,
