Add option to disable debug logging to file
Changes --debug flag to --stdout to more accurately reflect its purpose

Change log hanlder level based on Debug option in settings/server

--stdout logging always uses debug level

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -304,6 +304,7 @@
         "hidefinished": false,
         "installupdates": false,
         "keeplog": 3,
+        "debuglog": false,
         "launchbrowser": false,
         "language": "en",
         "serverhost": "0.0.0.0",
