#212 Allow preference of usenet or torrents
User can choose to prefer usenet or torrent releases

Releases are sorted by score, source preference (usenet/torrent), size (asc/desc)

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -271,6 +271,7 @@
         "keepsearchingdays": 3,
         "keepsearchingscore": 50,
         "mintorrentseeds": 1,
+        "preferredsource": "",
         "retention": 1500,
         "rsssyncfrequency": 60,
         "searchafteradd": false,
