#225 Allow user to require separate login for Settings pages
Adds second user account in settings/server for an Admin

When enabled, admin account is required to access any settings page.

Shortens the spacing between menu items to better fit on the screen.

Focus login input when page loads.

Fixes clearing password when login in incorrect.

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -291,6 +291,9 @@
             "user": "",
             "whitelist": ""
         },
+        "adminrequired": false,
+        "adminuser": "",
+        "adminpass": "",
         "apikey": "1c528e78c625e64e9a008d86a1b207cc",
         "authpass": "rehctaw",
         "authrequired": false,
