Preliminary DownloadStation support
Can add and remove torrents. Webui gives invalid task id error, but works so I'm not sure what the problem is with that.

Still need to add nzb and post processing.

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -36,6 +36,14 @@
                 "port": 8080,
                 "user": ""
             },
+            "DownloadStation": {
+                "account": "",
+                "destination": "",
+                "enabled": false,
+                "host": "http://localhost",
+                "pass": "",
+                "port": 5000
+            },
             "Transmission": {
                 "addpaused": false,
                 "category": "Watcher",
