--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -93,6 +93,14 @@
                 "host": "",
                 "port": 8080,
                 "priority": "Paused"
+            },
+            "DownloadStation": {
+                "account": "",
+                "destination": "",
+                "enabled": false,
+                "host": "http://localhost",
+                "pass": "",
+                "port": 5000
             }
         }
     },
