Basic framework in place
Everything works except the actual thing.

Added option to Downloader settings.

Added ability to get OAuth token via github.io site. All code for the token display is in one file, because transparency is kind of important. See the io repo for details.

Can test connection.

Cannot: Send torrent. Cancel torrent. Process torrent. But the hard work is done, all this is just http requests.

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -28,6 +28,15 @@
                 "port": 8112,
                 "priority": "Normal"
             },
+            "PutIO": {
+                "delete": false,
+                "directory": "",
+                "download": false,
+                "enabled": false,
+                "externaladdress": "",
+                "postprocessingenabled": false,
+                "oauthtoken": ""
+            },
             "QBittorrent": {
                 "category": "Watcher",
                 "enabled": false,
