Can add torrents
Gets downloadid, downloads to directory id, sends proper callback url and gets response.

Adding seems to be complete.

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -30,7 +30,7 @@
             },
             "PutIO": {
                 "delete": false,
-                "directory": "",
+                "directory": 0,
                 "download": false,
                 "enabled": false,
                 "externaladdress": "",
