Clarify config var names

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -29,9 +29,10 @@
                 "priority": "Normal"
             },
             "PutIO": {
-                "delete": false,
+                "deleteafterdownload": false,
                 "directory": 0,
-                "download": false,
+                "downloadwhencomplete": false,
+                "downloaddirectory": "",
                 "enabled": false,
                 "externaladdress": "",
                 "postprocessingenabled": false,
