Added support for DanishBits

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -90,6 +90,13 @@
     },
     "Indexers": {
         "NewzNab": {},
+        "PrivateTorrent": {
+            "danishbits": {
+                "enabled": false,
+                "username": "",
+                "passkey": ""
+            }
+        },
         "Torrent": {
             "extratorrent": false,
             "limetorrents": false,
