--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -1,7 +1,7 @@
 {
     "Downloader": {
         "Sources": {
-            "torrentenabled": false,
+            "torrentenabled": true,
             "usenetenabled": true
         },
         "Torrent": {
