Create Unknown resolution
Kodi import is crashing if ever there are movies without video details.
If resolution got empty string it crashes Kodi library import because this is not a know value in source_select list.
Creating explicit Unknown resolution/source, enable to manage properly this use case, allowing to flow seamlessly.

Propagate new Unknown in Quality settings

Add management of Unknown quality in quality settings to prevent page crash

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -263,6 +263,10 @@
             "WebRip-SD": {
                 "max": 3000,
                 "min": 500
+            },
+            "Unknown": {
+                "max": 20000,
+                "min": 500
             }
         }
     },
