#258 Add task to scan for missing files
Adds scheduledtask that scans disk for movie files and applies an action if they are not found. Currently two options are possible: revert or remove.

Revert is similar to a reset done through the management page except that it does not reset predb flags.

Remove removes movies from the library if their file has been deleted.

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -340,5 +340,13 @@
         "ssl_key": "",
         "uitheme": "",
         "verifyssl": true
+    },
+    "System": {
+        "FileManagement": {
+            "scanmissingfiles": false,
+            "scanmissinghour": 0,
+            "scanmissingmin": 0,
+            "missingfilesaction": 0
+        }
     }
 }
