#264 Fix key in config

--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -346,7 +346,7 @@
             "scanmissingfiles": false,
             "scanmissinghour": 0,
             "scanmissingmin": 0,
-            "missingfilesaction": 0
+            "missingfileaction": 0
         }
     }
 }
