--- a/core/base_config.cfg
+++ b/core/base_config.cfg
@@ -293,6 +293,7 @@
             "traktsync": false,
             "traktrss": ""
         },
+        "allowadult": false,
         "autograb": true,
         "freeleechpoints": 10,
         "keepsearching": false,
